# uy-ci-validator

./: Cargo.toml  README.md
src/: ci.rs  cli.rs  main.rs
src/ci/: test.rs
