[package]
name = "uy_ci_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "uy_ci_validator"
path = "src/main.rs"

[[bin]]
name = "uy_ci_validator"
path = "src/cli.rs"
